--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SubAlligator</string>
+    <string name="title_activity_liste_des_formations_acitivty">ListeDesFormationsAcitivty</string>
 </resources>
