--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">SubAlligator</string>
     <string name="title_activity_liste_des_formations_acitivty">ListeDesFormationsAcitivty</string>
     <string name="title_activity_seance_by_formation_screen">SeanceByFormationScreen</string>
+    <string name="title_activity_evaluation">EvaluationActivity</string>
+    <string name="title_activity_evaluation_screen">EvaluationScreen</string>
+    <string name="title_activity_content_screen">ContentScreen</string>
 </resources>
